# qt-meson-example

./: .gitignore  README.md  configure  meson.build
hello_world/: Info.plist  main.cpp  mainwindow.cpp  mainwindow.h  test_header.h
install-scripts/: install_script.sh  meson.build
run_commands/: brewprefix.bash
run_targets/: README.txt  distclean.sh
subprojects/: libjpeg.wrap  qt-everywhere-opensource-src-5.9.5.diff  qt-everywhere-opensource-src-5.9.6.diff  qt5.wrap
